Enhance core functionality: Order service, controller, logging, and scripts for v1.3.0.